2004-12-18	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-tab-header.c, terminal/terminal-tab-header.h: Fix
	  tab appearance oddities with the Gtk+ pixmap engine. This should
	  fix bug #33.

2004-12-18	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c: Another attempt to fix the sizing
	  bug with newly opened terminal tabs (bug #29).
	* vim.tcpalette, linux.tcpalette, xterm.tcpalette, rxvt.tcpalette,
	  terminal/terminal-preferences-dialog.c, pixmaps/, Terminal.mime.xml,
	  Makefile.am: Remove the color palette stuff again. Will be replaced
	  with a real color scheme management later (to fix bug #32).
	* terminal/terminal-preferences.c, terminal/terminal-window.c,
	  terminal/terminal-shortcut-editor.c, Terminal.ui, NEWS: Added a new
	  toplevel menu "Go", and moved "Prev Tab" and "Next Tab" to this
	  menu. All tabs are now listed in this "Go" and the first 9 tabs
	  can be assigned a keyboard shortcut (Alt+# by default). This fixes
	  bug #31.
	* po/: Update .po files. Update german translations.

2004-12-16	Benedikt Meurer <benny@xfce.org>

	* Terminal.desktop: Update translations; enable startup notification;
	  add Utility category.

2004-12-15	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-app.c(terminal_app_save_yourself): Use the command
	  as specified for gtk_init() when setting the RestartCommand on
	  SaveYourself if possible.
	* terminal/terminal-window.c(terminal_window_add): Ensure that the
	  widget allocation is done done before the grid size is applied after
	  a new terminal tab is added. This fixes bug #29.

2004-12-15	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-options.c: Fix a typo in the error message of
	  the --role option. This fixes bug #30.

2004-12-14	Benedikt Meurer <benny@xfce.org>

	* configure.ac, THANKS, terminal/terminal-window.c, po/: Added
	  zh_TW translations from Hydonsingore Sie
	  <hydonsingore@mail.educities.edu.tw>.

2004-12-13	Benedikt Meurer <benny@xfce.org>
